# markdown-to-pdf

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
.run/: black.run.xml  mypy.run.xml  pylint.run.xml  ruff.run.xml
sample/: config.toml  sample.py
sample/docs/: sample.md
src/md2pdf/: __init__.py  config.py  document.py  html_to_dict.py  parser.py  utils.py
tests/: config.toml  conftest.py  expected_document.py  test_config.py  test_document.py  test_md_to_pdf.py  test_parser_html.py  test_parser_markdown.py  test_utils.py
