[project]
name = "markdown-to-pdf"
version = "2023.10.09.0001"
description = "Convert markdown document to pdf"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["markdown", "pdf", "development"]
authors = [{ name = "Arnaldo Ono", email = "git@onoarnaldo.com" }]
maintainers = [{ name = "Arnaldo Ono", email = "git@onoarnaldo.com" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "html-to-json @ git+https://github.com/OnoArnaldo/py-html-to-json.git@b43981f0d8cede130b3d590479359c902821f91f",
    "Jinja2==3.1.2",
    "reportlab==4.0.5",
    "Markdown==3.5"
]

[project.optional-dependencies]
test = ["pytest", "coverage"]

[project.urls]
"Homepage" = "https://github.com/OnoArnaldo/markdown-to-pdf"
"Source" = "https://github.com/OnoArnaldo/markdown-to-pdf"

#[project.scripts]
#sample = "sample:main"

[tool.pylint.MAIN]
init-hook = "import sys; sys.path.append('./venv/lib/python3.11/site-packages/'); sys.path.append('./src')"

[tool.pylint.'MESSAGES CONTROL']
disable = ["raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-few-public-methods"]

[tool.pylint.FORMAT]
max-line-length=121


[tool.black]
line-length = 121
target-version = ['py310', 'py311']
skip-string-normalization = true


[tool.mypy]
implicit_optional = true